--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}Minesweeper API{% endblock %}</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+  {% block head %}{% endblock %}
 </head>
 <body>
   <main>
     {% block content %}
     {% endblock %}
   </main>
+  {% block endofbody %}{% endblock %}
 </body>
 </html>
