--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,10 +7,15 @@
   {% block head %}{% endblock %}
 </head>
 <body>
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
+  <div class="container">
+    <div class="pull-right">
+      {% if user.is_authenticated %}
+        Hi {{ user.username }}! <a href="{% url 'logout' %}">logout</a>
+      {% endif %}
+    </div>
+    <h1>Minesweeper</h1>
+    {% block content %}{% endblock %}
+  </div>
   {% block endofbody %}{% endblock %}
 </body>
 </html>
