--- a/app/templates/games/_board.html
+++ b/app/templates/games/_board.html
@@ -2,7 +2,10 @@
 <div class="col-md-12">
   <div class="board">
     <div class="board-row" v-for="(rowCells, row) in board">
-      <div class="board-cell" v-for="(cell, col) in rowCells" @click="cellClick(row, col)">
+      <div class="board-cell" v-for="(cell, col) in rowCells"
+        @click.left.prevent="cellClick(row, col, 'left')"
+        @click.right.prevent="cellClick(row, col, 'right')"
+      >
         <img v-if="cell == 0" src="{% static "images/unknown.png" %}" />
         <img v-if="cell == 1" src="{% static "images/flag.png" %}" />
         <img v-if="cell == 2" src="{% static "images/mine.png" %}" />
