--- a/app/templates/games/_board.html
+++ b/app/templates/games/_board.html
@@ -1,17 +1,19 @@
 {% load static %}
 <div class="col-md-12">
   <div class="board">
-    <div class="board-row" v-for="(rowCells, row) in board">
+    <div class="board-row" v-for="(rowCells, row) in user_board">
       <div class="board-cell" v-for="(cell, col) in rowCells"
         @click.left.prevent="cellClick(row, col, 'left')"
         @click.right.prevent="cellClick(row, col, 'right')"
       >
-        <img v-if="cell == 0" src="{% static "images/unknown.png" %}" />
-        <img v-if="cell == 1" src="{% static "images/flag.png" %}" />
-        <img v-if="cell == 2" src="{% static "images/mine.png" %}" />
-        <span v-if="cell == 3">2</span>
-        <img v-if="cell == 4" src="{% static "images/exploded.png" %}" />
+        <img v-if="cell == cellStatusUnknown" src="{% static "images/unknown.png" %}" />
+        <img v-else-if="cell == cellStatusFlag" src="{% static "images/flag.png" %}" />
+        <img v-else-if="cell == cellStatusMine" src="{% static "images/mine.png" %}" />
+        <img v-else-if="cell == cellStatusExploded" src="{% static "images/exploded.png" %}" />
+        <span v-else><b>${cell > 0 ? cell : '&nbsp;'}</b></span>
       </div>
     </div>
   </div>
+  <p>Mines: ${ mines - flagCount }</p>
+  <p>Status: ${ status }</p>
 </div>
