--- a/app/templates/games/_new_game_form.html
+++ b/app/templates/games/_new_game_form.html
@@ -1,3 +1,5 @@
+<h2>Start a new game</h2>
+
 <form class="form-inline" @submit.prevent="newGame">
   <div class="form-group">
     <label for="game-level">Level</label>
