--- a/app/templates/games/_new_game_form.html
+++ b/app/templates/games/_new_game_form.html
@@ -7,20 +7,20 @@
       <option value='beg'>Beginner</option>
       <option value='int'>Intermediate</option>
       <option value='exp'>Expert</option>
-      <option value='custom'>Custom</option>
+      <option value='cus'>Custom</option>
     </select>
   </div>
   <div class="form-group">
     <label for="width">Width</label>
-    <input type="text" class="form-control" id="width" v-model="width" :disabled="level !== 'custom'" style="max-width: 50px">
+    <input type="text" class="form-control" id="width" v-model="width" :disabled="level !== 'cus'" style="max-width: 50px">
   </div>
   <div class="form-group">
     <label for="height">Height</label>
-    <input type="text" class="form-control" id="height" v-model="height" :disabled="level !== 'custom'" style="max-width: 50px">
+    <input type="text" class="form-control" id="height" v-model="height" :disabled="level !== 'cus'" style="max-width: 50px">
   </div>
   <div class="form-group">
     <label for="mines">Mines</label>
-    <input type="text" class="form-control" id="mines" v-model="mines" :disabled="level !== 'custom'" style="max-width: 50px">
+    <input type="text" class="form-control" id="mines" v-model="mines" :disabled="level !== 'cus'" style="max-width: 50px">
   </div>
   <button type="submit" class="btn btn-primary">Start</button>
 </form>
