--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,8 +4,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-  Hi {{ user.username }}!
-  <p><a href="{% url 'logout' %}">logout</a></p>
+  <a href="{% url 'games' %}">Let's play!</a>
 {% else %}
   <p>You are not logged in.</p>
   <p>If you already have an account, please <a href="{% url 'login' %}">login</a>.</p>
